--- a/FinalFtp/app/src/main/res/layout/fragment_main.xml
+++ b/FinalFtp/app/src/main/res/layout/fragment_main.xml
@@ -45,6 +45,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="城市:"
                             android:textSize="20sp" />
@@ -53,7 +54,7 @@
                             android:id="@+id/lo_city"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:textSize="20sp" />
 
@@ -70,6 +71,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="国家:"
                             android:textSize="20sp" />
@@ -78,7 +80,7 @@
                             android:id="@+id/lo_coun"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -95,6 +97,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="国家标准:"
                             android:textSize="20sp" />
@@ -103,7 +106,7 @@
                             android:id="@+id/lo_ciso"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -120,15 +123,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="运营商:"
-                            android:textSize="16sp" />
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/lo_yys"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -145,15 +149,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="纬度:"
-                            android:textSize="16sp" />
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/lo_wd"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -170,15 +175,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="经度:"
-                            android:textSize="16sp" />
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/lo_jd"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -214,6 +220,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="SSID:"
                             android:textSize="20sp" />
@@ -222,7 +229,7 @@
                             android:id="@+id/wifi_ssid"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:textSize="20sp" />
 
@@ -238,6 +245,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="BSSID:"
                             android:textSize="20sp" />
@@ -246,7 +254,7 @@
                             android:id="@+id/wifi_bssid"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:textSize="20sp" />
 
@@ -262,6 +270,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="主机IP:"
                             android:textSize="20sp" />
@@ -270,7 +279,7 @@
                             android:id="@+id/wifi_ip"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -287,6 +296,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="外部IP:"
                             android:textSize="20sp" />
@@ -295,7 +305,7 @@
                             android:id="@+id/wifi_outip"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -312,15 +322,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="广播地址:"
-                            android:textSize="16sp" />
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/wifi_gbip"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -337,15 +348,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="网关地址:"
-                            android:textSize="16sp" />
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/wifi_wgip"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
@@ -362,15 +374,16 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:text="MAC地址:"
-                            android:textSize="16sp" />
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/wifi_mac"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="4"
+                            android:layout_weight="3.3"
                             android:gravity="center"
                             android:text=""
                             android:textSize="20sp" />
