--- a/FinalFtp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/FinalFtp/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,7 +20,7 @@
         <item
             android:id="@+id/nav_telnet"
             android:icon="@drawable/telnet"
-            android:title="Telnet连接" />
+            android:title="Telnet客户端" />
         <item
             android:id="@+id/nav_ping"
             android:icon="@drawable/ping"
